# YCLIMP

./: CMakeLists.txt  README.md  file.txt  requirements.txt
SQLiteCpp/: CMakeLists.txt
data/: KeyBindings.xml  KeysID.xml  ParseTest.cpp
doxygen/: Doxyfile
include/: AppFilesSW.hpp  Application.hpp  ConfirmDialogElement.hpp  Constants.hpp  Context.hpp  DatabaseIdentifiers.hpp  DatabaseManager.hpp  Debug.hpp  DialogBundle.hpp  DialogElement.hpp  DialogSW.hpp  ElementSelector.hpp  ElementSelector.tpp  FileManager.hpp  HotKeyComponent.hpp  LineEditDialogElement.hpp  ListDialogElement.hpp  ListDialogElement.tpp  LocalFilesSW.hpp  MainWindow.hpp  MusicPlayer.hpp  NewElementsDialogBundle.hpp  PlayerSW.hpp  PlayerStatusSW.hpp  PlaylistDao.hpp  Primitives.hpp  SWHolder.hpp  SWManager.hpp  SubWindow.hpp  TrackDao.hpp  Utility.hpp  XmlParser.hpp  YandexFilesSW.hpp
python_yaclient/: main.py  radio.py  server.py  utility.py  yaclient.py
src/: AppFilesSW.cpp  Application.cpp  ConfirmDialogElement.cpp  Context.cpp  DatabaseManager.cpp  Debug.cpp  DialogBundle.cpp  DialogElement.cpp  DialogSW.cpp  ElementSelector.cpp  FileManager.cpp  HotKeyComponent.cpp  LineEditDialogElement.cpp  ListDialogElement.cpp  LocalFilesSW.cpp  Main.cpp  MainWindow.cpp  MusicPlayer.cpp  NewElementsDialogBundle.cpp  PlayerSW.cpp  PlayerStatusSW.cpp  PlaylistDao.cpp  Primitives.cpp  SWHolder.cpp  SWManager.cpp  SubWindow.cpp  TrackDao.cpp  Utility.cpp  XmlParser.cpp  YandexFilesSW.cpp
